--- a/site4.html
+++ b/site4.html
@@ -28,7 +28,7 @@
         <div class="container">
             <div class="imagens">
                 <div>
-                    <img width="60 0px" src="img/python.jpg" alt="python">
+                    <img width="600px" src="img/python.jpg" alt="python">
                     <p>Melhor Linguagem!</p>
                 </div>
                 <div class="imagens-lado">
