--- a/site1.html
+++ b/site1.html
@@ -50,22 +50,31 @@
                     <div class="java">
                         <div>
                             <div>
-
                                 <img width="200px" src="img/java.jpg" alt="java">
                                 <p>java</p>
                             </div>
-                            <img width="200px" src="img/java.jpg" alt="java">
-                            <p>java</p>
-                            <img width="200px" src="img/java.jpg" alt="java">
-                            <p>java</p>
+                            <div>
+                                <img width="200px" src="img/java.jpg" alt="java">
+                                <p>java</p>
+                            </div>
+                            <div>
+                                <img width="200px" src="img/java.jpg" alt="java">
+                                <p>java</p>
+                            </div>
                         </div>
                         <div>
-                            <img width="200px" src="img/java.jpg" alt="java">
-                            <p>java</p>
-                            <img width="200px" src="img/java.jpg" alt="java">
-                            <p>java</p>
-                            <img width="200px" src="img/java.jpg" alt="java">
-                            <p>java</p>
+                            <div>
+                                <img width="200px" src="img/java.jpg" alt="java">
+                                <p>java</p>
+                            </div>
+                            <div>
+                                <img width="200px" src="img/java.jpg" alt="java">
+                                <p>java</p>
+                            </div>
+                            <div>
+                                <img width="200px" src="img/java.jpg" alt="java">
+                                <p>java</p>
+                            </div>
                         </div>
                     </div>
                 </div>
